--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -23,7 +23,7 @@ body {
     width: 100%;
     padding-top: 10px;
   }
-  @include rwd(768){
+  @include rwd(768) {
     height: auto;
     margin: 0;
     padding: 0 0 10px 30px;
@@ -34,7 +34,7 @@ body {
       width: 130px;
       height: 160px;
       margin-top: 10px;
-      @include rwd(768){
+      @include rwd(768) {
         width: 30px;
         height: 40px;
       }
@@ -80,7 +80,7 @@ body {
       img {
         width: 18px;
         height: 20px;
-        margin:0 10px 0 0;
+        margin: 0 10px 0 0;
       }
     }
     .checkout {
@@ -158,7 +158,7 @@ body {
             animation: aa 0.5s forwards;
             font-weight: bolder;
             background-color: #97999b;
-            @include rwd(768){
+            @include rwd(768) {
               animation: aaaa 0.5s forwards;
             }
             &:hover {
@@ -284,7 +284,7 @@ body {
         }
       }
       animation: aa 0.5s;
-      @include rwd(768){
+      @include rwd(768) {
         animation: aaaa 0.5s;
       }
       p {
@@ -331,9 +331,17 @@ body {
   padding-bottom: 100px;
   margin: 0 auto;
   display: flex;
+  @include rwd(1200) {
+    width: auto;
+    margin: 0;
+    display: block;
+  }
   // reservation_left_box
   .reservation_left_box {
     padding-right: 100px;
+    @include rwd(1200) {
+      padding-right: 0;
+    }
     .reservation_left_box_title {
       .title {
         margin: 80px 0 0 10px;
@@ -349,6 +357,7 @@ body {
       z-index: 2;
       @include rwd(1200) {
         transform: translateX(-100%);
+        position: absolute;
         transition: all 0.5s;
         &:hover {
           transform: translateX(0);
@@ -437,8 +446,7 @@ body {
   .reservation_right_box {
     margin: 140px 0 0 100px;
     @include rwd(1200) {
-      margin-left: 0;
-      transform: translateX(-200%);
+      margin: 20px 0 0 30px;
     }
     .reservation_right_item {
       .title {
@@ -463,11 +471,11 @@ body {
   margin-top: 100px;
   @include rwd(1200) {
     margin-left: 0;
-    transform: translateX(-37%);
   }
-  @include rwd(420) {
-    transform: translateX(-41%);
+  @include rwd(768){
+    margin-top: 0;
   }
+
   .reservation_right_item {
     .six_title {
       padding-top: 10px;
@@ -478,23 +486,14 @@ body {
     }
     .six_right_main {
       padding: 5px 0 0 10px;
-      margin: 50px 0 0 30px; 
+      margin: 50px 0 0 30px;
       @include rwd(1200) {
         margin-top: 0;
       }
-      @include rwd(968) {
-        width: 80%;
-      }
-      @include rwd(780) {
-        width: 60%;
-      }
-      @include rwd(600) {
-        width: 40%;
-      }
-      @include rwd(420) {
-        width: 30%;
-      }
       .six_list {
+        @include rwd(768){
+          padding-right: 100px;
+        }
         .six_num {
           font-size: 16px;
           font-weight: bolder;
@@ -544,11 +543,7 @@ body {
 .privacy_right_box {
   margin: 100px 0 0 20px;
   @include rwd(1200) {
-    margin-left: 0;
-    transform: translateX(-37%); 
-  }
-  @include rwd(440) {
-    transform: translateX(-41%);
+    margin: 0;
   }
   .privacy_title {
     padding-top: 20px;
@@ -561,13 +556,8 @@ body {
     padding: 50px 200px 0 50px;
     font-size: 15px;
     @include rwd(768) {
-      width: 80%;
-    }
-    @include rwd(600) {
-      width: 70%;
-    }
-    @include rwd(400) {
-      width: 60%;
+      width: 100%;
+      padding:50px 100px 0 70px;
     }
     p {
       padding-bottom: 30px;
@@ -582,10 +572,12 @@ body {
 .SSL_right_box {
   margin: 100px 0 0 20px;
   @include rwd(1200) {
-    margin-left: 0;
-    transform: translateX(-37%);
+    margin: 0;
+    padding: 0 100px  0 70px;
   }
-
+  @include rwd(499){
+    padding: 0 20px;
+  }
   .SSL_title {
     padding: 20px 0 30px 0;
     p {
@@ -594,20 +586,8 @@ body {
   }
   .SSL_main {
     width: 80%;
-    @include rwd(1200) {
+    @include rwd(768) {
       width: 100%;
-    }
-    @include rwd(968) {
-      width: 80%;
-    }
-    @include rwd(740) {
-      width: 60%;
-    }
-    @include rwd(570) {
-      width: 50%;
-    }
-    @include rwd(468) {
-      width: 30%;
     }
     .SSL_coin {
       display: flex;
@@ -621,11 +601,16 @@ body {
       p {
         width: 100%;
         margin-right: 50px;
+        font-size: 14px;
         @include rwd(570) {
           margin-right: 0;
         }
         img {
+          width: 400px;
           transform: translateY(-20px);
+          @include rwd(768){
+            width: 100%;
+          }
         }
       }
     }
@@ -638,7 +623,7 @@ body {
   padding: 100px 0 0 0;
   @include rwd(1200) {
     margin-left: 0;
-    transform: translateX(-37%);
+    padding: 0;
   }
   .login_txt {
     padding: 20px 0 0 30px;
@@ -667,38 +652,29 @@ body {
     .account,
     .password {
       margin-top: 20px;
+      @include rwd(768) {
+        margin-right: 20px;
+      }
       input {
         padding: 10px 0;
         border-radius: 10px;
         @include rwd(768) {
-          width: 70%;
-        }
-        @include rwd(699) {
-          width: 50%;
-        }
-        @include rwd(599) {
-          width: 40%;
-        }
-        @include rwd(499) {
-          width: 30%;
+          width: 100%;
         }
       }
     }
     .forget {
-      width: 30%;
-      margin: 20px 0 0 100px;
+      width: 100%;
+      margin: 20px auto;
       padding: 5px 5px;
       font-size: 12px;
       color: #97999b;
       justify-content: space-around;
       @include rwd(768) {
         display: flex;
-        justify-content: inherit;
+        justify-content: center;
       }
       @include rwd(599) {
-        margin-left: 0;
-      }
-      @include rwd(499) {
         margin-left: 0;
       }
       p {
@@ -711,7 +687,7 @@ body {
         background-color: #97999b;
         color: #fff;
         @include rwd(768) {
-          margin-left: 100px;
+          margin-left: 50px;
         }
         @include rwd(499) {
           margin-left: 60px;
@@ -724,6 +700,11 @@ body {
   }
   .join {
     padding-top: 20px;
+    .title {
+      p {
+        padding-left: 30px;
+      }
+    }
     .join_log {
       padding: 40px 0 20px 50px;
       font-size: 12px;
@@ -790,15 +771,18 @@ body {
   width: 800px;
   padding: 100px 0 0 0;
   @include rwd(1200) {
-    transform: translateX(-37%);
     margin-left: 0;
+    padding-top: 0;
   }
-  @include rwd(499) {
-    transform: translateX(-41%);
+  @include rwd(768) {
+    width: auto;
   }
   .register_txt {
     width: 96%;
     padding: 80px 0 0 30px;
+    @include rwd(768) {
+      padding-top: 50px;
+    }
     .account,
     .password,
     .password_confirm,
@@ -894,17 +878,8 @@ body {
       }
       .email_checkbox {
         width: 220px;
-        @include rwd(876) {
-          width: 70%;
-        }
-        @include rwd(650) {
-          width: 50%;
-        }
-        @include rwd(430) {
-          width: 40%;
-        }
-        @include rwd(350) {
-          width: 30%;
+        @include rwd(768) {
+          width: 100%;
         }
       }
       p {
@@ -924,18 +899,6 @@ body {
         width: 100%;
         height: 160px;
         border: 1px solid #dedede;
-        @include rwd(876) {
-          width: 70%;
-        }
-        @include rwd(650) {
-          width: 50%;
-        }
-        @include rwd(430) {
-          width: 40%;
-        }
-        @include rwd(350) {
-          width: 30%;
-        }
       }
     }
     .join_member {
@@ -944,25 +907,12 @@ body {
       white-space: nowrap;
       display: flex;
       justify-content: end;
-      @include rwd(876) {
-        width: 70%;
-      }
-      @include rwd(768) {
-        margin-left: 0;
-      }
-      @include rwd(650) {
-        width: 50%;
-      }
-      @include rwd(430) {
-        width: 40%;
-      }
-      @include rwd(350) {
-        width: 30%;
-      }
       p {
-        padding: 10px 40px;
+        padding: 8px 30px;
+        letter-spacing: 2px;
+        font-size: 14px;
         background-color: #97999b;
-        color: #eeeeee;
+        color: #fff;
       }
     }
     .account,
@@ -1003,17 +953,9 @@ body {
         }
       }
       .tel_box {
-        @include rwd(876) {
-          width: 70%;
-        }
-        @include rwd(650) {
-          width: 50%;
-        }
-        @include rwd(430) {
-          width: 40%;
-        }
-        @include rwd(350) {
-          width: 30%;
+        @include rwd(768) {
+          width: 100%;
+          border-radius: 5px;
         }
       }
     }
@@ -1037,20 +979,9 @@ body {
     .company_tel,
     .company_address {
       input {
-        @include rwd(876) {
-          width: 70%;
-        }
-        @include rwd(650) {
-          width: 50%;
-        }
-        @include rwd(650) {
-          width: 50%;
-        }
-        @include rwd(430) {
-          width: 40%;
-        }
-        @include rwd(350) {
-          width: 30%;
+        @include rwd(768) {
+          width: 100%;
+          border-radius: 5px;
         }
       }
     }
@@ -1107,7 +1038,7 @@ body {
   width: 30%;
   height: 60%;
   padding: 5px;
-  margin:0 0 0 -35%;
+  margin: 0 0 0 -35%;
   position: fixed;
   top: 20%;
   left: 70%;
