--- a/style/online.css
+++ b/style/online.css
@@ -256,7 +256,7 @@ body {
 .logo .link .checkout img {
   width: 18px;
   height: 20px;
-  margin: 0 10px 0 0;
+  margin-right: 10px;
 }
 .logo .link .checkout {
   margin-left: 10px;
@@ -453,11 +453,11 @@ body {
 .reservation_title ul .about_us {
   width: 100%;
   height: 70px;
-  background-color: #97999b;
   display: none;
   align-items: center;
   justify-content: center;
   color: #fff;
+  background-color: #97999b;
   position: absolute;
   left: 0;
   bottom: 0;
@@ -580,10 +580,10 @@ body {
 .process .process_list li {
   width: auto;
   border-radius: 50px;
-  background-color: transparent;
   font-size: 12px;
-  position: absolute;
+  background-color: transparent;
   color: #000;
+  position: absolute;
   top: -13px;
   display: flex;
   align-items: center;
@@ -819,9 +819,9 @@ body {
   color: #b20000;
 }
 .rooms_calendar .week div {
-  background: #8a8989;
   opacity: 0.7;
   border: none;
+  background: #8a8989;
   color: #fff;
 }
 .rooms_calendar .current-date {
