--- a/style/online.scss
+++ b/style/online.scss
@@ -80,7 +80,7 @@ body {
       img {
         width: 18px;
         height: 20px;
-        margin: 0 10px 0 0;
+        margin-right: 10px;
       }
     }
     .checkout {
@@ -264,11 +264,11 @@ body {
     .about_us {
       width: 100%;
       height: 70px;
-      background-color: #97999b;
       display: none;
       align-items: center;
       justify-content: center;
       color: #fff;
+      background-color: #97999b;
       position: absolute;
       left: 0;
       bottom: 0;
@@ -379,10 +379,10 @@ body {
     li {
       width: auto;
       border-radius: 50px;
-      background-color: transparent;
       font-size: 12px;
-      position: absolute;
+      background-color: transparent;
       color: #000;
+      position: absolute;
       top: -13px;
       display: flex;
       align-items: center;
@@ -604,9 +604,9 @@ body {
     }
   }
   .week div {
-    background: #8a8989;
     opacity: 0.7;
     border: none;
+    background: #8a8989;
     color: #fff;
   }
   .current-date {
