--- a/style/stay.css
+++ b/style/stay.css
@@ -353,7 +353,7 @@ img {
 }
 @media screen and (max-width: 1180px) {
   .clous_content .clous_item {
-    padding: 0 0 0 50px;
+    padding-right: 0;
   }
 }
 @media screen and (max-width: 767px) {
@@ -741,8 +741,7 @@ img {
   }
 }
 .linshan_content .linshan_item h2 {
-  padding: 12px 0;
-  padding-top: 60px;
+  padding: 60px 0 12px;
   border-bottom: 1px solid #d6d6d6;
   color: #191919;
   font-size: 24px;
