--- a/style/generally.css
+++ b/style/generally.css
@@ -255,7 +255,7 @@ body {
 .logo .link .checkout img {
   width: 18px;
   height: 20px;
-  margin: 0 10px 0 0;
+  margin-right: 10px;
 }
 .logo .link .checkout {
   margin-left: 10px;
@@ -797,7 +797,6 @@ body {
   position: fixed;
   top: 20%;
   left: 70%;
-  z-index: 10002;
   background-color: #fff;
   text-align: center;
   z-index: 2;
