--- a/style/generally.scss
+++ b/style/generally.scss
@@ -79,7 +79,7 @@ body {
       img {
         width: 18px;
         height: 20px;
-        margin: 0 10px 0 0;
+        margin-right: 10px;
       }
     }
     .checkout {
@@ -583,7 +583,6 @@ body {
   position: fixed;
   top: 20%;
   left: 70%;
-  z-index: 10002;
   background-color: #fff;
   text-align: center;
   z-index: 2;
