--- a/style/rooms_item.scss
+++ b/style/rooms_item.scss
@@ -80,8 +80,7 @@ body {
       img {
         width: 18px;
         height: 20px;
-        margin-right: 10px;
-        margin-top: 0;
+        margin:0 10px 0 0;
       }
     }
     .checkout {
