--- a/style/footer.css
+++ b/style/footer.css
@@ -188,8 +188,7 @@ img {
   padding: 103px 12% 90px calc(20px + 5.7%);
   position: relative;
   background: #bae1d0;
-  border-bottom-right-radius: 15px;
-  border-top-right-radius: 15px;
+  border-radius: 0 15px 15px 0;
 }
 @media screen and (max-width: 960px) {
   .footer .footer_box {
@@ -464,7 +463,7 @@ img {
 }
 .footer .footer_box .wrap .right_box ul li::after {
   content: "";
-  width: 0;
+  width: auto;
   height: 1px;
   margin-top: 5px;
   position: absolute;
