--- a/style/footer.scss
+++ b/style/footer.scss
@@ -17,8 +17,7 @@
     padding: 103px 12% 90px calc(20px + 5.7%);
     position: relative;
     background: #bae1d0;
-    border-bottom-right-radius: 15px;
-    border-top-right-radius: 15px;
+    border-radius:0 15px 15px 0;
     @include rwd(960) {
       border-radius: 15px;
     }
@@ -264,7 +263,7 @@
             position: relative;
             &::after {
               content: "";
-              width: 0;
+              width: auto;
               height: 1px;
               margin-top: 5px;
               position: absolute;
