--- a/style/header.css
+++ b/style/header.css
@@ -505,7 +505,7 @@ img {
   top: -10%;
 }
 .header_m .burger .menu.on p {
-  padding: 0 0 0 5px;
+  padding-left: 5px;
 }
 .header_m .burger p {
   padding-right: 20px;
