--- a/style/header.scss
+++ b/style/header.scss
@@ -339,7 +339,7 @@
           top: -10%;
         }
         p {
-          padding: 0 0 0 5px;
+          padding-left: 5px;
         }
       }
     }
