--- a/style/notice.css
+++ b/style/notice.css
@@ -256,7 +256,7 @@ body {
 .logo .link .checkout img {
   width: 18px;
   height: 20px;
-  margin: 0 10px 0 0;
+  margin-right: 10px;
 }
 .logo .link .checkout {
   margin-left: 10px;
@@ -286,11 +286,11 @@ body {
     display: block;
     background: url(../img/online/menu.jpg) center center;
     border: 1px solid #000000;
+    font-size: 13px;
+    line-height: 28px;
     position: absolute;
     right: 0;
     bottom: 0;
-    font-size: 13px;
-    line-height: 28px;
     text-align: center;
   }
 }
@@ -455,11 +455,11 @@ body {
 .reservation_title ul .about_us {
   width: 100%;
   height: 70px;
+  color: #fff;
   background-color: #97999b;
+  display: none;
   align-items: center;
   justify-content: center;
-  color: #fff;
-  display: none;
   position: absolute;
   left: 0;
   bottom: 0;
@@ -552,8 +552,8 @@ body {
   width: 30px;
   height: 30px;
   border-radius: 50px;
-  background-color: #8a8989;
   color: #fff;
+  background-color: #8a8989;
   position: absolute;
   top: -13px;
   display: flex;
@@ -602,7 +602,6 @@ body {
 .process .process_list li:nth-child(2) {
   left: 24%;
   top: 25px;
-  color: #0d7000;
 }
 .process .process_list li:nth-child(3) {
   left: 48%;
@@ -616,6 +615,20 @@ body {
   left: 99%;
   top: -40px;
   white-space: nowrap;
+}
+@media screen and (max-width: 700px) {
+  .process .process_list li:nth-child(2) {
+    left: 23%;
+  }
+  .process .process_list li:nth-child(3) {
+    left: 46%;
+  }
+  .process .process_list li:nth-child(4) {
+    left: 73%;
+  }
+  .process .process_list li:nth-child(5) {
+    left: 99%;
+  }
 }
 
 .notice {
