--- a/style/notice.scss
+++ b/style/notice.scss
@@ -80,7 +80,7 @@ body {
       img {
         width: 18px;
         height: 20px;
-        margin: 0 10px 0 0;
+        margin-right: 10px;
       }
     }
     .checkout {
@@ -108,11 +108,11 @@ body {
       display: block;
       background: url(../img/online/menu.jpg) center center;
       border: 1px solid #000000;
+      font-size: 13px;
+      line-height: 28px;
       position: absolute;
       right: 0;
       bottom: 0;
-      font-size: 13px;
-      line-height: 28px;
       text-align: center;
     }
   }
@@ -266,11 +266,11 @@ body {
     .about_us {
       width: 100%;
       height: 70px;
+      color: #fff;
       background-color: #97999b;
+      display: none;
       align-items: center;
       justify-content: center;
-      color: #fff;
-      display: none;
       position: absolute;
       left: 0;
       bottom: 0;
@@ -352,8 +352,8 @@ body {
       width: 30px;
       height: 30px;
       border-radius: 50px;
-      background-color: #8a8989;
       color: #fff;
+      background-color: #8a8989;
       position: absolute;
       top: -13px;
       display: flex;
@@ -401,7 +401,6 @@ body {
       &:nth-child(2) {
         left: 24%;
         top: 25px;
-        color: #0d7000;
       }
       &:nth-child(3) {
         left: 48%;
@@ -415,6 +414,20 @@ body {
         left: 99%;
         top: -40px;
         white-space: nowrap;
+      }
+      @include rwd(700){
+        &:nth-child(2) {
+          left: 23%;
+        }
+        &:nth-child(3) {
+          left: 46%;
+        }
+        &:nth-child(4) {
+          left: 73%;
+        }
+        &:nth-child(5) {
+          left: 99%;
+        }
       }
     }
   }
