--- a/style/servers.scss
+++ b/style/servers.scss
@@ -281,7 +281,7 @@
     flex-wrap: wrap;
     .facility_list {
       width: 50%;
-      padding: 0 0px 50px;
+      padding-bottom: 50px;
       @include rwd(960) {
         width: 100%;
       }
@@ -426,10 +426,10 @@
     h2 {
       padding: 15px 10px;
       margin: 50px 0;
-      background-color: #63bedf;
-      color: #fff;
       text-align: center;
       border: 1px solid #63bedf;
+      background-color: #63bedf;
+      color: #fff;
       cursor: pointer;
     }
     .txt {
