--- a/style/stay.css
+++ b/style/stay.css
@@ -598,11 +598,11 @@ img {
   font-size: 55px;
 }
 .linshan_content_bg .txt {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   top: 30%;
   right: 2%;
-  display: flex;
-  flex-direction: column;
   color: #fff;
 }
 @media screen and (max-width: 840px) {
@@ -731,7 +731,7 @@ img {
 }
 @media screen and (max-width: 1180px) {
   .linshan_content .linshan_item {
-    padding: 0 0 0 50px;
+    padding-right: 0;
   }
 }
 @media screen and (max-width: 767px) {
