--- a/style/generally.scss
+++ b/style/generally.scss
@@ -354,6 +354,9 @@ body {
     padding-bottom: 100px;
     margin: 0 auto;
     display: flex;
+    @include rwd(1200) {
+        display: block;
+    }
     @include rwd(968) {
         width: 1000px;
     }
@@ -362,7 +365,6 @@ body {
     }
     // reservation_left_box
     .reservation_left_box {
-        padding-right: 170px;
         @include rwd(1200) {
             padding-right: 0;
         }
@@ -383,6 +385,7 @@ body {
             @include rwd(1200) {
                 transform: translateX(-100%);
                 transition: all 0.5s;
+                position: absolute;
                 &:hover {
                     transform: translateX(0);
                 }
@@ -469,30 +472,28 @@ body {
     // reservation_right_box
     .reservation_right_box {
         margin-top: 120px;
-        @include rwd(1200) {
-            margin-left: 0;
-            transform: translateX(-25%);
-        }
-        @include rwd(968) {
-            transform: translateX(-30%);
-        }
-        @include rwd(667) {
-            transform: translateX(-32%);
-        }
-        @include rwd(400) {
-            transform: translateX(-41%);
+        @include rwd(1200){
+            margin-top: 50px;
         }
         .reservation_right_item {
             display: flex;
             flex-wrap: wrap;
+            @include rwd(665){
+                display: block;
+            }
             .room_list {
                 width: 340px;
                 padding: 40px 5px;
-                margin-bottom: 20px;
+                margin:0 50px 20px;
                 background-color: #eee;
                 position: relative;
                 @include rwd(968) {
+                    width: 340px;
+                    margin: 0 20px 20px ;
+                }
+                @include rwd(768) {
                     width: 300px;
+                    margin: 0 21px 20px ;
                 }
                 h2 {
                     padding: 20px 0;
@@ -506,13 +507,7 @@ body {
                     list-style: none;
                 }
                 &:nth-child(even) {
-                    margin-left: 70px;
-                    @include rwd(968) {
-                        margin-left: 20px;
-                    }
-                    @include rwd(665) {
-                        margin-left: 0;
-                    }
+
                 }
                 .rooms_item {
                     display: flex;
