--- a/style/generally.css
+++ b/style/generally.css
@@ -555,6 +555,11 @@ body {
   margin: 0 auto;
   display: flex;
 }
+@media screen and (max-width: 1200px) {
+  .reservation_box {
+    display: block;
+  }
+}
 @media screen and (max-width: 968px) {
   .reservation_box {
     width: 1000px;
@@ -564,9 +569,6 @@ body {
   .reservation_box {
     width: 840px;
   }
-}
-.reservation_box .reservation_left_box {
-  padding-right: 170px;
 }
 @media screen and (max-width: 1200px) {
   .reservation_box .reservation_left_box {
@@ -590,6 +592,7 @@ body {
   .reservation_box .reservation_left_box .reservation_item {
     transform: translateX(-100%);
     transition: all 0.5s;
+    position: absolute;
   }
   .reservation_box .reservation_left_box .reservation_item:hover {
     transform: translateX(0);
@@ -675,39 +678,35 @@ body {
 }
 @media screen and (max-width: 1200px) {
   .reservation_box .reservation_right_box {
-    margin-left: 0;
-    transform: translateX(-25%);
-  }
-}
-@media screen and (max-width: 968px) {
-  .reservation_box .reservation_right_box {
-    transform: translateX(-30%);
-  }
-}
-@media screen and (max-width: 667px) {
-  .reservation_box .reservation_right_box {
-    transform: translateX(-32%);
-  }
-}
-@media screen and (max-width: 400px) {
-  .reservation_box .reservation_right_box {
-    transform: translateX(-41%);
+    margin-top: 50px;
   }
 }
 .reservation_box .reservation_right_box .reservation_right_item {
   display: flex;
   flex-wrap: wrap;
 }
+@media screen and (max-width: 665px) {
+  .reservation_box .reservation_right_box .reservation_right_item {
+    display: block;
+  }
+}
 .reservation_box .reservation_right_box .reservation_right_item .room_list {
   width: 340px;
   padding: 40px 5px;
-  margin-bottom: 20px;
+  margin: 0 50px 20px;
   background-color: #eee;
   position: relative;
 }
 @media screen and (max-width: 968px) {
   .reservation_box .reservation_right_box .reservation_right_item .room_list {
+    width: 340px;
+    margin: 0 20px 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .reservation_right_item .room_list {
     width: 300px;
+    margin: 0 21px 20px;
   }
 }
 .reservation_box .reservation_right_box .reservation_right_item .room_list h2 {
@@ -720,19 +719,6 @@ body {
 }
 .reservation_box .reservation_right_box .reservation_right_item .room_list li {
   list-style: none;
-}
-.reservation_box .reservation_right_box .reservation_right_item .room_list:nth-child(even) {
-  margin-left: 70px;
-}
-@media screen and (max-width: 968px) {
-  .reservation_box .reservation_right_box .reservation_right_item .room_list:nth-child(even) {
-    margin-left: 20px;
-  }
-}
-@media screen and (max-width: 665px) {
-  .reservation_box .reservation_right_box .reservation_right_item .room_list:nth-child(even) {
-    margin-left: 0;
-  }
 }
 .reservation_box .reservation_right_box .reservation_right_item .room_list .rooms_item {
   display: flex;
