--- a/style/main.scss
+++ b/style/main.scss
@@ -1822,10 +1822,10 @@ body {
         margin: 0 30px 0 0;
       }
       @include rwd(550) {
-        margin: 0 60px 0 0;
+        margin-right: 60px;
       }
       @include rwd(510) {
-        margin: 0 90px 0 0;
+        margin-right: 90px;
       }
       @include rwd(500) {
         margin: 0;
@@ -3463,7 +3463,7 @@ body {
             }
           }
           p {
-            margin: 0 0 0 20px;
+            margin-left: 20px;
           }
         }
       }
