--- a/style/reservation.css
+++ b/style/reservation.css
@@ -825,7 +825,7 @@ body {
 
 .login_right_box {
   width: 100%;
-  padding: 100px 0 0 0;
+  padding-top: 100px;
 }
 @media screen and (max-width: 1200px) {
   .login_right_box {
@@ -860,7 +860,7 @@ body {
 .login_right_box .login_txt .forget input {
   width: 220px;
   margin-right: 10px;
-  padding: 5px 5px;
+  padding: 5px;
   border: 1px solid #dedede;
 }
 .login_right_box .login_txt .account input:active,
@@ -1010,7 +1010,7 @@ body {
 
 .register_right_box {
   width: 800px;
-  padding: 100px 0 0 0;
+  padding-top: 100px;
 }
 @media screen and (max-width: 1200px) {
   .register_right_box {
@@ -1025,11 +1025,11 @@ body {
 }
 .register_right_box .register_txt {
   width: 96%;
-  padding: 80px 0 0 30px;
+  padding: 80px 0 0 80px;
 }
 @media screen and (max-width: 768px) {
   .register_right_box .register_txt {
-    padding-top: 50px;
+    padding: 50px 0 0 30px;
   }
 }
 .register_right_box .register_txt .account,
@@ -1262,7 +1262,7 @@ body {
 .register_right_box .register_txt .company_tel input,
 .register_right_box .register_txt .company_address input {
   width: 220px;
-  padding: 10px 0 10px 10px;
+  padding: 5px 10px;
 }
 @media screen and (max-width: 768px) {
   .register_right_box .register_txt .account input,
