--- a/style/rooms_item.css
+++ b/style/rooms_item.css
@@ -256,7 +256,7 @@ body {
 .logo .link .checkout img {
   width: 18px;
   height: 20px;
-  margin: 0 10px 0 0;
+  margin-right: 10px;
 }
 .logo .link .checkout {
   margin-left: 10px;
@@ -635,7 +635,7 @@ body {
 }
 .reservation_box .reservation_right_box {
   width: 70%;
-  padding: 120px 0 0 0;
+  padding-top: 120px;
 }
 @media screen and (max-width: 1200px) {
   .reservation_box .reservation_right_box {
@@ -755,7 +755,7 @@ body {
 }
 .reservation_box .reservation_right_box {
   width: 70%;
-  padding: 120px 0 0 0;
+  padding-top: 120px;
 }
 @media screen and (max-width: 1200px) {
   .reservation_box .reservation_right_box {
@@ -877,7 +877,7 @@ body {
 }
 .reservation_box .reservation_right_box {
   width: 70%;
-  padding: 120px 0 0 0;
+  padding-top: 120px;
 }
 @media screen and (max-width: 1200px) {
   .reservation_box .reservation_right_box {
@@ -1000,7 +1000,7 @@ body {
 }
 .reservation_box .reservation_right_box {
   width: 70%;
-  padding: 120px 0 0 0;
+  padding-top: 120px;
 }
 @media screen and (max-width: 1200px) {
   .reservation_box .reservation_right_box {
@@ -1122,7 +1122,7 @@ body {
 }
 .reservation_box .reservation_right_box {
   width: 70%;
-  padding: 120px 0 0 0;
+  padding-top: 120px;
 }
 @media screen and (max-width: 1200px) {
   .reservation_box .reservation_right_box {
