--- a/style/rooms.scss
+++ b/style/rooms.scss
@@ -123,10 +123,13 @@
           display: none;
           position: absolute;
           top: 45%;
-          left: 40%;
+          left: 45%;
           border: 1px solid #fff;
           color: #fff;
           z-index: 2;
+          @include rwd(1400) {
+            left: 40%;
+          }
         }
         &::after {
           content: "";
