--- a/style/stay.css
+++ b/style/stay.css
@@ -347,6 +347,9 @@ img {
 .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide.slick-current .clous_carousel_m_img {
   margin-left: 0;
 }
+.clous_content .clous_carousel .clous_carousel_m .slick-track .slick-active:last-child .clous_carousel_m_img {
+  margin: 0;
+}
 .clous_content .clous_item {
   width: 40%;
   padding: 0 140px 0 50px;
@@ -363,7 +366,7 @@ img {
   }
 }
 .clous_content .clous_item h2 {
-  padding: 60px 0 12px 0;
+  padding: 60px 0 12px;
   border-bottom: 1px solid #d6d6d6;
   color: #191919;
   font-size: 24px;
