--- a/style/offer.scss
+++ b/style/offer.scss
@@ -658,7 +658,7 @@ body {
   margin: 0 auto;
   padding-left: 10px;
   .rooms_days {
-    padding: 100px 0 20px 0;
+    padding: 100px 0 20px;
     display: flex;
     justify-content: space-evenly;
     position: relative;
