--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -80,7 +80,7 @@ body {
       img {
         width: 18px;
         height: 20px;
-        margin: 0 10px 0 0;
+        margin-right: 10px;
       }
     }
     .checkout {
