--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -545,8 +545,7 @@ body {
     margin: 0;
   }
   .privacy_title {
-    padding-top: 20px;
-    margin-left: 40px;
+    padding: 20px 0 0 40px;
     p {
       font-weight: bolder;
     }
@@ -569,9 +568,8 @@ body {
 
 // SSL_right_box
 .SSL_right_box {
-  margin: 100px 0 0 20px;
+  padding: 100px 0 0 20px;
   @include rwd(1200) {
-    margin: 0;
     padding: 0 100px 0 70px;
   }
   @include rwd(499) {
@@ -770,7 +768,6 @@ body {
   width: 800px;
   padding-top: 100px;
   @include rwd(1200) {
-    margin-left: 0;
     padding-top: 0;
   }
   @include rwd(768) {
