--- a/layout/footer.html
+++ b/layout/footer.html
@@ -62,12 +62,24 @@
           <div class="right_box on">
             <div class="title">SITE CONTENTS</div>
             <ul>
-              <li><a href="../../page/introduction.html">飯店簡介</a></li>
-              <li><a href="../../page/servers.html">服務設施</a></li>
-              <li><a href="../../page/rooms.html">客房介紹</a></li>
-              <li><a href="../../page/location.html">交通位置</a></li>
-              <li><a href="../../page/latest.html">新訊與活動</a></li>
-              <li><a href="../../page/contact.html">聯絡我們</a></li>
+              <a href="../../page/introduction.html">
+                <li>飯店簡介</li>
+              </a>
+              <a href="../../page/servers.html">
+                <li>服務設施</li>
+              </a>
+              <a href="../../page/rooms.html">
+                <li>客房介紹</li>
+              </a>
+              <a href="../../page/location.html">
+                <li>交通位置</li>
+              </a>
+              <a href="../../page/latest.html">
+                <li>新訊與活動</li>
+              </a>
+              <a href="../../page/contact.html">
+                <li>聯絡我們</li>
+              </a>
             </ul>
             <div class="txt">
               <p>Copyright © 2024 舞牛森度假飯店 All Rights Reserved.</p>
